--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
 }
 
 .intro-text {
-	font-size: 20px;
+	font-size: 2vw;
 	margin: 10px 200px;
 	line-height: 1.5;
 }
@@ -26,7 +26,7 @@ body {
 
 ol li {
 	line-height: 2;
-	font-size: 18px;
+	font-size: 1.5vw;
 	color: blue;
 }
 
